# The-Agentic-Infrastructure-Challenge-

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.ps1  install.cmd  pyproject.toml  report.md  requirements.txt  simulated_commit_log.txt  submission_report_snippet.md  tenx_mcp_sense_log.txt
.agent/workflows/: mcp-setup.md  setup.md  tools.md
.antigravity/: mcp.json
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/templates/commands/: check-spec.md  check-telemetry.md  check-tests.md
communication/: client_update_timing_validation.md
notebook/: analysis_eda.ipynb
research/: architecture_strategy.md  notes.md  tooling_strategy.md
skills/: README.md
skills/skill_check_wallet_balance/: skill.py
skills/skill_fetch_trends/: README.md  skill.py
skills/skill_generate_content/: skill.py
skills/skill_publish_post/: skill.py
skills/skill_validate_image/: skill.py
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  planner_service.md  technical.md
specs/task-1/: plan.md  spec.md  tasks.md
src/frontend/: app.py
src/frontend/pages/: 1_Campaigns.py  2_Agents.py
src/planner/: engine.py
src/schemas/: agent_task.py
task1/: __init__.py  telemetry.py  worker.py
tests/: test_agent_task.py  test_planner.py  test_skills_interface.py  test_task1_initial.py  test_telemetry_task1.py
