[tool.poetry]
name = "chimera"
version = "0.1.0"
description = "Project Chimera — research scaffold for autonomous influencer agents (Task 1 deliverables only)"
authors = ["Chimera Team <ops@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3"
redis = "^5.0"
weaviate-client = "^3.0"
sqlalchemy = "^2.0"
alembic = "^1.10"
httpx = "^0.24"
uvicorn = "^0.22"
fastapi = "^0.101"
cryptography = "^41.0"
langchain = "^0.0"
coinbase-agentkit = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^24.3"
isort = "^5.12"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
